--- a/maket/src/scss/_keyframes.scss
+++ b/maket/src/scss/_keyframes.scss
@@ -1,17 +1,17 @@
 @keyframes navTopScale {
     from {
-        transform: scale(0);
+        transform: translateX(100px) scale(0);
     }
     to {
-        transform: scale(1);
+        transform: translateX(0) scale(1);
     }
 }
 @keyframes navTopScaleReverse {
     from {
-        transform: scale(1);
+        transform: translateX(0) scale(1);
     }
     to {
-        transform: scale(0);
+        transform: translateX(100px) scale(0);
     }
 }
 
