--- a/maket/src/scss/app.scss
+++ b/maket/src/scss/app.scss
@@ -44,9 +44,10 @@ body{
 
 .section{
     width: 100%;
-    height: 100vh;
+    height: 100vh !important;
     transition: all .5s ease-in-out;
     overflow: hidden;
+    pointer-events: none;
     & > div{
         transition: all .5s ease-in-out;
         transform: translateY(-100px);
@@ -54,6 +55,7 @@ body{
     }
     &.active{
         box-shadow: 0 -10px 20px 1px rgba(0,0,0,.3);
+        pointer-events: initial;
         & > div{
             animation: sectionTranslateTop .5s ease both;
         }
@@ -138,6 +140,7 @@ body{
         ul{
             li{
                 a{
+                    visibility: visible;
                     animation: navTopScale .5s both ease ;
                 }
             }
@@ -153,6 +156,21 @@ body{
         li{
             padding-left: 40px;
             padding-right: 40px;
+            &:nth-child(1) {
+                a{
+                    animation-delay: .1s;
+                }
+            }
+            &:nth-child(2) {
+                a{
+                    animation-delay: .12s;
+                }
+            }
+            &:nth-child(3) {
+                a{
+                    animation-delay: .15s;
+                }
+            }
             a{
                 font-family: $IBM;
                 color: $text;
@@ -162,8 +180,9 @@ body{
                 text-decoration: none;
                 transform-origin: 100% 50%;
                 transition: all .5s ease;
-                transform: scale(0);
+                transform: translateX(100%) scale(0);
                 animation: navTopScaleReverse .5s both ease ;
+                visibility: hidden;
                 &:hover{
                     text-decoration: underline;
                 }
@@ -181,7 +200,7 @@ body{
     justify-content: space-between;
     padding-bottom: 100px;
     @media (max-height: 930px) {
-        padding-bottom: 0;
+        padding-bottom: 30px;
     }
 }
 .content__main{
@@ -191,8 +210,8 @@ body{
         line-height: 96px;
         font-weight: normal;
         @media (max-height: 930px) {
-            font-size: 70px;
-            line-height: 76px;
+            font-size: 60px;
+            line-height: 66px;
         }
     }
 }
@@ -206,20 +225,118 @@ body{
         padding-left: 35px;
         padding-right: 35px;
         width: calc(33.3333% - (195px / 3));
+        &:nth-child(1) {
+            .preview_case{
+                &:hover{
+                    &::before{
+                        background-color: rgba(255, 49, 49, 0.8);
+                    }
+                }
+            }
+        }
+        &:nth-child(2) {
+            .preview_case{
+                &:hover{
+                    &::before{
+                        background-color: rgba(109, 255, 73, .9);
+                    }
+                }
+            }
+        }
+        &:nth-child(3) {
+            .preview_case{
+                &:hover{
+                    &::before{
+                        background-color: #4D9CD5;
+                    }
+                }
+            }
+        }
         &.last{
             width: 195px;
+            position: relative;
+            .show-case--arrow{
+                position: absolute;
+                left: 0;
+                top: 50%;
+                margin-top: 13px;
+            }
+        }
+    }
+}
+
+.show-case--arrow{
+    font-size: 26px;
+    line-height: 1;
+    color: $text;
+    text-decoration: none;
+    display: block;
+    span{
+        display: block;
+        width: 80px;
+        height: 2px;
+        background-color: $dark;
+        margin-bottom: 60px;
+        transition: all .25s ease;
+        position: relative;
+        &::before{
+            content: '';
+            width: 10px;
+            height: 10px;
+            border-radius: 2px;
+            border-top: 2px solid $dark;
+            border-right: 2px solid $dark;
+            transform: rotate(45deg);
+            position: absolute;
+            right: -1px;
+            top: -4px;
+        }
+    }
+    &:hover{
+        span{
+            width: 100%;
         }
     }
 }
 
 .preview_case{
     margin-bottom: 30px;
+    position: relative;
+    &::before{
+        content: '';
+        width: 100%;
+        height: 50%;
+        position: absolute;
+        left: 0;
+        top: 50%;
+        transform: translateY(-50%);
+        transition: all .25s ease;
+    }
+    &:hover {
+        &::before{
+            filter: blur(100px);
+        }
+        .transform{
+            transform: translate(0, 0) !important;
+        }
+        .preview_case-content{
+            visibility: visible;
+            opacity: 1;
+        }
+        .preview_case-date{
+            color: $text;
+        }
+    }
+    .transform{
+        transition: all .25s ease-in-out;
+    }
     &-date{
         color: #838388;
         font-family: $IBM;
         font-size: 20px;
         line-height: 1;
         padding-bottom: 10px;
+        transition: all .25s ease;
     }
     &-title{
         border-top: 2px solid $dark ;
@@ -236,10 +353,290 @@ body{
         }
     }
     &-content{
-        display: none;
+        visibility: hidden;
+        transition: all .25s ease-in-out;
+        opacity: 0;
         .description{
-
+            padding: 20px 0;
+            font-family: $IBM;
+            font-size: 16px;
+            line-height: 24px;
+            height: 134px;
+            overflow: hidden;
         }
     }
 
+}
+
+.btn{
+    padding: 40px 60px;
+    display: inline-block;
+    border-radius: 100px;
+    border: 1px solid $dark; 
+    color: $text;
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 300;
+    font-family: $IBM;
+    line-height: 1;
+    span{
+        display: none;
+    }
+    &-arrow{
+        display: inline-flex;
+        align-items: center;
+        &:hover{
+            span{
+                width: 160px;
+            }
+        }
+        span{
+            display: block;
+            width: 140px;
+            height: 2px;
+            background-color: $dark;
+            margin-left: 25px;
+            transition: all .25s ease;
+            position: relative;
+            &::before{
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-radius: 2px;
+                border-top: 2px solid $dark;
+                border-right: 2px solid $dark;
+                transform: rotate(45deg);
+                position: absolute;
+                right: -1px;
+                top: -4px;
+            }
+        }
+    }
+}
+
+.btn-read{
+    text-decoration: underline;
+    font-size: 16px;
+    color: $text;
+    line-height: 1;
+    &:hover{
+        text-decoration: none;
+    }
+}
+.text-center{
+    text-align: center;
+}
+.title__section{
+    font-size: 64px;
+    line-height: 84px;
+    color: $text;
+    margin-top: 0;
+    margin-bottom: 70px;
+    font-weight: 400;
+    &--gray{
+        color: #dadada;
+    }
+}
+
+.what-doing__list{
+    &-item{
+        border-bottom: 1px solid #DADADA;
+        max-width: 825px;
+        margin-left: auto;
+        margin-right: auto;
+        &:hover{
+            a{
+                transform: scale(1.2);
+            }
+            &:nth-child(1) {
+                a{
+                    &::before{
+                        background-color: rgba(255, 49, 49, 0.8);
+                    }
+                }
+            }
+            &:nth-child(2) {
+                a{
+                    &::before{
+                        background-color: rgba(109, 255, 73, .9);
+                    }
+                }
+            }
+            &:nth-child(3) {
+                a{
+                    &::before{
+                        background-color: #4D9CD5;
+                    }
+                }
+            }
+        }
+        a{
+            display: block;
+            font-size: 58px;
+            line-height: 1.2;
+            font-family: $IBM;
+            padding: 50px 0;
+            text-align: center;
+            color: $text;
+            text-decoration: none;
+            font-weight: 300;
+            position: relative;
+            transition: all .25s ease;
+            &::before{
+                content: '';
+                width: 50%;
+                height: 50%;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%,-50%);
+                transition: all .25s ease;
+                filter: blur(50px);
+                z-index: -1;
+            }
+            @media (max-height: 930px) {
+                font-size: 38px;
+                padding: 25px 0;
+            }
+        }
+    }
+}
+
+.description-section{
+    font-family: $IBM;
+    font-size: 34px;
+    line-height: 50px;
+    max-width: 1195px;
+    margin-left: auto;
+    margin-right: auto;
+    color: $text;
+    p{
+        margin: 0;
+        & + p{
+            margin-top: 15px;
+        }
+    }
+    .wrap-btn{
+        margin-top: 100px;
+    }
+}
+
+.section{
+    &.hover{
+        .bubble{
+            opacity: 1;
+            &-1{
+                transform: translate(-50%,50%) scale(1);
+            }
+            &-2{
+                transform: translate(50%,-50%) scale(1);
+            }
+            &-3{
+                transform: translate(-50%,-50%) scale(1);
+            }
+        }
+    }
+}
+
+.section__who-we{
+    .bubble{
+        width: 400px;
+        height: 300px;
+        filter: blur(100px);
+        transition: all .25s ease;
+        position: absolute;
+        z-index: -1;
+        opacity: 0;
+        &-1{
+            background-color: rgba(255, 49, 49, 0.8);
+            left: 0;
+            bottom: 0;
+            transform: translate(-50%,50%) scale(0);
+        }
+        &-2{
+            background-color: rgba(109, 255, 73, .9);
+            right: 0;
+            top: 0;
+            transform: translate(50%,-50%) scale(0);
+        }
+        &-3{
+            background-color: #4D9CD5;
+            right: 50%;
+            top: 50%;
+            transform: translate(-50%,-50%) scale(0);
+        }
+    }
+}
+
+.section__footer{
+    background-color: $dark;
+    height: 100%;
+    padding-bottom: 75px;
+    position: relative;
+    padding-bottom: 40px;
+    .top-line{
+        filter: invert(1);
+    }
+    ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        li{
+            margin-bottom: 55px;
+            font-style: normal;
+            font-weight: 300;
+            font-size: 34px;
+            line-height: 50px;
+            font-family: $IBM;
+            color: #fff;
+            text-align: center;
+            a{
+                line-height: 1.2;
+                display: block;
+                color: #fff;
+                text-align: center;
+                text-decoration: none;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+    .wrap-btn{
+        margin-top: auto;
+        position: absolute;
+        left: 50%;
+        bottom: 75px;
+        transform: translateX(-50%);
+    }
+}
+
+.btn-up{
+    width: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    transition: all .25s ease; 
+    &:hover{
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+    span{
+        height: 40px;
+        width: 2px;
+        background-color: #fff;
+        position: relative;
+        display: block;
+        &::before{
+            content: "";
+            width: 10px;
+            height: 10px;
+            border-radius: 2px;
+            border-top: 2px solid #fff;
+            border-right: 2px solid #fff;
+            transform: rotate(-45deg);
+            position: absolute;
+            right: -4px;
+            top: -1px;
+        }
+    }
 }
