--- a/maket/src/scss/app.scss
+++ b/maket/src/scss/app.scss
@@ -3,6 +3,7 @@
 @import "./keyframes";
 
 @import "../../node_modules/normalize.css/normalize";
+@import "../../node_modules/swiper/swiper-bundle";
 
 
 *,
@@ -60,6 +61,12 @@ body{
             animation: sectionTranslateTop .5s ease both;
         }
     }
+    &.non-shadow{
+        box-shadow: none !important;
+    }
+    &.section-heigth--auto {
+        height: auto !important;
+    }
 }
 
 .container {
@@ -72,11 +79,16 @@ body{
 }
 
 .top-line {
+    position: relative;
     &__content{
         display: flex;
         align-items: center;
         justify-content: space-between;
         padding: 35px 0;
+        width: 100%;
+        @media (max-width: 992px) {
+            padding: 25px 0;
+        }
     }
     &__right{
         display: flex;
@@ -84,6 +96,9 @@ body{
         justify-content: space-between;
         .burger{
             margin-left: 180px;
+            @media (max-width: 1200px) {
+                margin-left: 90px;
+            }
         }
     }
 }
@@ -96,9 +111,18 @@ body{
     justify-content: space-between;
     transition: all .25s ease;
     position: relative;
+    @media (max-width: 992px) {
+        z-index: 100;
+    }
     //animation: burgerNotActive .25s ease both;
     &.active{
         //animation: burgerActive .25s ease both;
+        @media (max-width: 992px) {
+            
+            span{
+                background-color: #fff;
+            }
+        }
         span{
             &:nth-child(1) {
                 transform: rotateZ(20deg);
@@ -136,6 +160,51 @@ body{
 }
 
 .nav-top{
+    @media (max-width: 992px) {
+        position: absolute;
+        right: 0;
+        top: 0;
+        transition: all .25s ease;
+        visibility: hidden;
+        &.active{
+            visibility: visible;
+            background-color: $dark;
+            min-width: 320px;
+            padding-top: 70px;
+            z-index: 2;
+            padding-left: 20px;
+            padding-right: 20px;
+            padding-bottom: 20px;
+        }
+        
+        ul{
+            flex-direction: column;
+            li{
+                .sub-menu{
+                    display: block;
+                    padding-top: 15px;
+                    padding-bottom: 10px;
+                    li{
+                        margin-bottom: 25px;
+                        a{
+                            font-size: 20px;
+                            line-height: 22px;
+                        }
+                    }
+                }
+                a{
+                    color: #fff;
+                    font-size: 30px;
+                    line-height: 1.2;
+                    margin-bottom: 30px;
+                    text-align: left;
+                }
+            }
+        }
+    }
+    @media (max-width: 767px) {
+        width: 100%;
+    }
     &.active{
         ul{
             li{
@@ -153,9 +222,20 @@ body{
         display: flex;
         margin-left: -40px;
         margin-right: -40px;
+        @media (max-width: 1200px) {
+            margin-left: -20px;
+            margin-right: -20px;
+            li{
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        }
         li{
             padding-left: 40px;
             padding-right: 40px;
+            .sub-menu{
+                display: none;
+            }
             &:nth-child(1) {
                 a{
                     animation-delay: .1s;
@@ -202,6 +282,9 @@ body{
     @media (max-height: 930px) {
         padding-bottom: 30px;
     }
+    @media (max-width: 767px) {
+        padding-bottom: 80px;
+    }
 }
 .content__main{
     h1{
@@ -209,10 +292,19 @@ body{
         font-size: 90px;
         line-height: 96px;
         font-weight: normal;
+        @media (max-width: 767px) {
+            font-size: 36px !important;
+            line-height: 40px !important;
+        }
         @media (max-height: 930px) {
             font-size: 60px;
             line-height: 66px;
         }
+        @media (max-width: 992px) {
+            font-size: 60px;
+            line-height: 66px;
+        }
+        
     }
 }
 /* END section MAIN */ 
@@ -225,8 +317,11 @@ body{
         padding-left: 35px;
         padding-right: 35px;
         width: calc(33.3333% - (195px / 3));
-        &:nth-child(1) {
-            .preview_case{
+        @media (max-width: 1200px) {
+            display: none;
+        }
+        .preview_case{
+            &.red {
                 &:hover{
                     &::before{
                         background-color: rgba(255, 49, 49, 0.8);
@@ -234,8 +329,8 @@ body{
                 }
             }
         }
-        &:nth-child(2) {
-            .preview_case{
+        .preview_case{
+            &.green {
                 &:hover{
                     &::before{
                         background-color: rgba(109, 255, 73, .9);
@@ -243,8 +338,8 @@ body{
                 }
             }
         }
-        &:nth-child(3) {
-            .preview_case{
+        .preview_case{
+            &.blue {
                 &:hover{
                     &::before{
                         background-color: #4D9CD5;
@@ -255,11 +350,17 @@ body{
         &.last{
             width: 195px;
             position: relative;
+            @media (max-width: 1200px) {
+                display: block;
+            }
             .show-case--arrow{
                 position: absolute;
                 left: 0;
                 top: 50%;
                 margin-top: 13px;
+                @media (max-width: 1200px) {
+                    position: initial;
+                }
             }
         }
     }
@@ -379,6 +480,10 @@ body{
     font-weight: 300;
     font-family: $IBM;
     line-height: 1;
+    @media (max-width: 992px) {
+        font-size: 20px;
+        padding: 30px;
+    }
     span{
         display: none;
     }
@@ -436,14 +541,26 @@ body{
     &--gray{
         color: #dadada;
     }
+    @media (max-width: 992px) {
+        font-size: 50px;
+        line-height: 1.2;
+        margin-bottom: 60px;
+    }
+    @media (max-width: 767px) {
+        font-size: 36px;
+        line-height: 40px;
+        margin-bottom: 30px;
+    }
 }
 
 .what-doing__list{
+    max-width: 825px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     &-item{
         border-bottom: 1px solid #DADADA;
-        max-width: 825px;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
         &:hover{
             a{
                 transform: scale(1.2);
@@ -482,6 +599,14 @@ body{
             font-weight: 300;
             position: relative;
             transition: all .25s ease;
+            @media (max-width: 992px) {
+                font-size: 30px;
+                padding: 30px 0;
+            }
+            @media (max-width: 767px) {
+                font-size: 26px !important;
+                line-height: 36px;
+            }
             &::before{
                 content: '';
                 width: 50%;
@@ -510,6 +635,13 @@ body{
     margin-left: auto;
     margin-right: auto;
     color: $text;
+    @media (max-width: 992px) {
+        font-size: 26px;
+        line-height: 1.2;
+    }   
+    @media (max-width: 767px) {
+        font-size: 20px;
+    }
     p{
         margin: 0;
         & + p{
@@ -518,6 +650,9 @@ body{
     }
     .wrap-btn{
         margin-top: 100px;
+        @media (max-width: 767px) {
+            margin-top: 35px;
+        }
     }
 }
 
@@ -577,7 +712,7 @@ body{
     .top-line{
         filter: invert(1);
     }
-    ul{
+    .list-footer{
         list-style-type: none;
         padding: 0;
         margin: 0;
@@ -590,6 +725,10 @@ body{
             font-family: $IBM;
             color: #fff;
             text-align: center;
+            @media (max-width: 767px) {
+                font-size: 22px;
+                margin-bottom: 40px;
+            }
             a{
                 line-height: 1.2;
                 display: block;
@@ -639,4 +778,389 @@ body{
             top: -1px;
         }
     }
+}
+.section__what-doing{
+    @media (max-width: 992px) {
+        background-color: #f4f4f4;
+    }
+}
+.section__footer,
+.section__who-we,
+.section__what-doing{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    .container{
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.section-cases{
+    .title__section{
+        margin-top: 70px;
+        @media (max-width: 767px) {
+            margin-top: 20px;
+            margin-bottom: 40px;
+        }
+    }
+    &__item{
+        padding-bottom: 150px;
+        @media (max-width: 1200px) {
+            padding-bottom: 70px;
+        }
+    }
+}
+
+.filter-cases{
+    &--control{
+        padding-bottom: 100px;
+        @media (max-width: 767px) {
+            padding-bottom: 40px;
+        }
+        ul{
+            padding: 0;
+            margin: 0;
+            display: flex;
+            flex-wrap: wrap;
+            list-style-type: none;
+            li{
+                margin-right: 200px;
+                @media (max-width: 1200px) {
+                    margin-right: 100px;
+                }
+                @media (max-width: 992px) {
+                    margin-right: 50px;
+                }
+                @media (max-width: 767px) {
+                    margin-bottom: 15px;
+                }
+                a{
+                    font-size: 26px;
+                    line-height: 1;
+                    position: relative;
+                    color: $text;
+                    text-decoration: none;
+                    &.active{
+                        &::before{
+                            opacity: 1;
+                        }
+                        span{
+                            position: absolute;
+                            right: -25px;
+                            top: 50%;
+                            width: 18px;
+                            height: 18px;
+                            margin-top: -7px;
+                            &::after,
+                            &::before{
+                                content: '';
+                                width: 18px;
+                                height: 2px;
+                                background-color: $dark;
+                                position: absolute;
+                                left: 50%;
+                                top: 50%;
+
+                            }
+                            &::before{
+                                transform: translate(-50%,-50%) rotate(45deg);
+                            }
+                            &::after{
+                                transform: translate(-50%,-50%) rotate(-45deg);
+                            }
+                        }
+                    }
+                    &:hover{
+                        &::before{
+                            opacity: 1;
+                        }
+                    }
+                    &::before{
+                        content: '';
+                        width: 100%;
+                        min-width: 330px;
+                        height: 100%;
+                        border-radius: 50%;
+                        filter: blur(50px);
+                        position: absolute;
+                        left: 50%;
+                        top: 50%;
+                        transform: translate(-50%,-50%);
+                        opacity: 0;
+                        transition: all .25s ease;
+                        z-index: -1;
+                    }
+                    &.blue{
+                        &::before{
+                            background-color: #4D9CD4;
+                        }
+                    }
+                    &.red{
+                        &::before{
+                            background-color: #FF3131;
+                        }
+                    }
+                    &.green {
+                        &::before{
+                            background-color: #6DFF49;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    &--content{
+        .show-case{
+            flex-wrap: wrap;
+            &__col{
+                width: 33.333333%;
+                margin-bottom: 80px;
+                @media (max-width: 1200px) {
+                    display: block;
+                }
+                @media (max-width: 992px) {
+                    width: 50%;
+                    margin-bottom: 40px;
+                }
+                @media (max-width: 767px) {
+                    width: 100%;
+                }
+            }
+        }
+        .preview_case{
+            .transform{
+                transform: none !important;
+            }
+            .preview_case-content{
+                visibility: visible;
+                opacity: 1;
+                .description{
+                    height: auto;
+                }
+            }
+        }
+        
+    }
+}
+
+.header-block {
+    display: flex;
+    margin-top: 70px;
+    margin-bottom: 70px;
+    @media (max-width: 1500px) {
+        h1{
+            font-size: 44px;
+
+        }
+    }
+    @media (max-width: 1200px) {
+        margin: 40px 0;
+        h1{
+            font-size: 36px;
+            line-height: 40px;
+        }
+    }
+    @media (max-width: 700px) {
+        flex-direction: column;
+        margin-bottom: 70px;
+        h1{
+            width: 100%;
+        }
+        p{
+            width: 100%;
+        }
+    }
+    h1{
+        font-size: 64px;
+        line-height: 1.2;
+        margin: 0;
+        margin-right: 100px;
+        width: 50%;
+        font-weight: 400;
+        padding-bottom: 40px;
+    }
+    p{
+        font-size: 16px;
+        line-height: 24px;
+        font-family: $IBM;
+        margin: 0;
+        width: 50%;
+        padding-bottom: 40px;
+    }
+}
+.case-carousel--wrapper{
+    @media (max-width: 992px) {
+        .swiper{
+            &-container{
+                overflow: visible;
+                z-index: 20;
+            }
+            &-button-prev{
+                left: 50%;
+                margin-left: -30px;
+            }
+            &-button-next{
+                right: 50%;
+                margin-right: -30px;
+            }
+            &-button-prev,
+            &-button-next {
+                top: -52px;
+                margin-top: 0;
+                width: 26px;
+                height: 9px;
+            }
+        }
+    }
+}
+
+.swiper{
+    
+    &-button-prev,
+    &-button-next {
+        height: 152px;
+        width: 49px;
+        background-image: url('../assets/img/icons/arrow-carousel.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+        margin-top: -75px;
+        &::after{
+            display: none;
+        }
+    }
+    &-button-prev{
+        transform: scaleX(-1);
+    }
+}
+
+.case-carousel--wrapper{
+    position: relative;
+    .swiper-pagination{
+        position: absolute;
+        left: 0;
+        top: -60px;
+        bottom: initial;
+        text-align: center;
+        font-size: 16px;
+        line-height: 24px;
+    }
+}
+
+.case-slide{
+    text-align: center;
+    @media (max-width: 992px) {
+        text-align: left;
+        img{
+            margin-bottom: 50px;     
+        }
+    }
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 100%;
+        margin-bottom: 70px;
+    }
+    h3{
+        margin-top: 0;
+        font-size: 26px;
+        font-weight: normal;
+        line-height: 1.2;
+        margin-bottom: 15px;
+    }
+    p{
+        margin: 0;
+        font-size: 16px;
+        line-height: 24px;
+        font-family: $IBM;
+        max-width: 790px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+
+.other-section{
+    background-color: #dadada;
+    padding-top: 120px;
+    padding-bottom: 70px;
+    @media (max-width: 1200px) {
+        padding-top: 70px;
+    }
+    .title__section{
+        margin-bottom: 0;
+        font-size: 48px;
+        @media (max-width: 1200px) {
+            margin-bottom: 40px;
+        }
+        @media (max-width: 700px) {
+            font-size: 36px;
+        }
+    }
+    .show-case{
+        
+        @media (max-width: 1200px) {
+            margin-left: -15px;
+            margin-right: -15px;
+            flex-wrap: wrap;
+        }
+        .show-case__col{
+            @media (max-width: 1200px) {
+                display: block;
+                width: 33.333333%;
+                padding-left: 15px;
+                padding-right: 15px;
+            }
+            @media (max-width: 992px) {
+                width: 50%;
+            }
+            @media (max-width: 700px) {
+                width: 100% !important;
+            }
+            &.last { 
+                
+                @media (max-width: 1200px) {
+                    width: 100%;
+                    .show-case--arrow{
+                        display: flex;
+                        align-items: center;
+                        white-space: nowrap;
+                        span{
+                            order: 2;
+                            margin-bottom: -6px;
+                            margin-left: 15px;
+                        }
+                    }
+                }
+                .show-case--arrow{
+                }
+            }
+        }
+        .preview_case {
+            @media (max-width: 700px) {
+                margin-bottom: 60px;
+            }
+            .transform{
+                @media (max-width: 1200px) {
+                    transform: none !important;
+                }
+            }
+            .preview_case-content{
+                @media (max-width: 1200px) {
+                    opacity: 1;
+                    visibility: visible;
+                    .description{
+                        height: auto;
+                    }
+                }
+            }
+        }
+    }
+    
 }
