--- a/maket/src/scss/app.scss
+++ b/maket/src/scss/app.scss
@@ -480,6 +480,15 @@ body{
     font-weight: 300;
     font-family: $IBM;
     line-height: 1;
+    background-color: #fff;
+    &:hover{
+        cursor: pointer;
+        opacity: 0.8;
+    }
+    &.btn-small{
+        padding: 30px;
+        font-size: 20px;
+    }
     @media (max-width: 992px) {
         font-size: 20px;
         padding: 30px;
@@ -1163,4 +1172,361 @@ body{
         }
     }
     
+}
+
+.section-blog{
+    .title__section{
+        margin-top: 70px;
+    }
+    @media (max-width: 992px) {
+        .title__section{
+            margin-top: 0;
+        }
+    }
+}
+
+.blog{
+    &-grid{
+        margin-left: -15px;
+        margin-right: -15px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    &-col{
+        width: 33.3333%;
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-bottom: 100px;
+        @media (max-width: 992px) {
+            width: 50%;
+            margin-bottom: 50px;
+        }
+        @media (max-width: 700px) {
+            width: 100%;
+        }
+    }
+    &-preview{
+        max-width: 405px;
+        .date{
+            font-size: 16px;
+            line-height: 24px;
+            margin-bottom: 12px;
+            font-family: $IBM;
+        }
+        h3{
+            font-size: 26px;
+            line-height: 34px;
+            margin-top: 0;
+            margin-bottom: 15px;
+            font-weight: normal;
+            a{
+                color: $dark;
+                text-decoration: none;
+                &:hover{
+                    text-decoration: underline;
+                }
+            }
+        }
+        p{
+            margin-top: 0;
+            font-size: 16px;
+            line-height: 24px;
+            margin-bottom: 25px;
+        }
+        .read{
+            font-family: $IBM;
+            font-size: 16px;
+            line-height: 1;
+            display: inline-block;
+            text-decoration: underline;
+            color: $text;
+            &:hover{
+                text-decoration: none;
+            }
+        }
+    }
+    &-content{
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 70px;
+        @media (max-width: 992px) {
+            flex-direction: column;
+        }
+    }
+    &-left{
+        width: calc(100% - 370px);
+        padding-right: 30px;
+        @media (max-width: 992px) {
+            width: 100%;
+            padding-right: 0;
+            .date{
+                margin-bottom: 30px;
+            }
+            h3{
+                font-size: 22px;
+                line-height: 30px;
+                font-weight: 500;
+            }
+            p{
+                font-size: 20px;
+            }
+        }
+        .date{
+            font-size: 16px;
+            line-height: 24px;
+            font-family: $IBM;
+            margin-bottom: 50px;
+        }
+        h3{
+            font-weight: 600;
+            font-size: 26px;
+            line-height: 36px;
+            margin-bottom: 30px;
+            margin-top: 0;
+        }
+        p{
+            font-size: 20px;
+            line-height: 30px;
+            margin-top: 0;
+            margin-bottom: 30px;
+        }
+    }
+}
+
+.blog-item__bottom{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    padding-top: 70px;
+    @media (max-width: 992px) {
+        flex-direction: column;
+        .prev{
+            order: 2;
+        }
+        .socials{
+            margin-bottom: 50px;
+            flex-direction: column;
+            span{
+                margin-bottom: 20px;
+                margin-right: 0;
+            }
+        }
+    }
+    .prev{
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+        line-height: 1;
+        color: $text;
+        text-decoration: none;
+        &:hover{
+            text-decoration: underline;
+        }
+        span{
+            width: 50px;
+            height: 2px;
+            background-color: $dark;
+            position: relative;
+            margin-right: 15px;
+            &::before{
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-left: 2px solid $dark;
+                border-bottom: 2px solid $dark;
+                transform: rotate(45deg);
+                position: absolute;
+                left: 0;
+                top: 50%;
+                margin-top: -5px;
+            }
+        }
+    }
+}
+
+aside{
+    max-width: 400px;
+    width: 100%;
+    margin-top: 70px;
+    @media (max-width: 992px) {
+        h4{
+            span{
+                display: none;
+            }
+        }
+    }
+    h4{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-size: 36px;
+        line-height: 40px;
+        margin-bottom: 70px;
+        margin-top: 0;
+        font-weight: normal;
+        span{
+            max-width: 95px;
+            width: 100%;
+            margin-left: 15px;
+            height: 2px;
+            background-color: $dark;
+            position: relative;
+            margin-right: 15px;
+            margin-bottom: -5px;
+            &::before{
+                content: '';
+                width: 10px;
+                height: 10px;
+                border-right: 2px solid $dark;
+                border-bottom: 2px solid $dark;
+                transform: rotate(-45deg);
+                position: absolute;
+                right: 0;
+                top: 50%;
+                margin-top: -5px;
+            }
+        }
+    }
+    .blog-preview{
+        margin-bottom: 50px;
+    }
+}
+
+.caption-image{
+    text-align: center;
+    margin-bottom: 30px;
+    img{
+        max-width: 100%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 30px;
+    }
+    span{
+        text-align: center;
+        display: block;
+        font-size: 16px;
+        line-height: 24px;
+        color: rgba(32, 32, 34, 0.5);
+        font-family: $IBM;
+    }
+}
+
+.pagination{
+    margin-bottom: 100px;
+    @media (max-width: 992px) {
+        margin-bottom: 50px;
+    }
+    ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: -20px;
+        margin-right: -20px;
+        @media (max-width: 992px) {
+            margin-left: -10px;
+            margin-right: -10px;
+        }
+        li{
+            padding-left: 20px;
+            padding-right: 20px;
+            @media (max-width: 992px) {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
+            a{
+                font-size: 18px;
+                line-height: 23px;
+                text-decoration: none;
+                color: $text;
+                opacity: 0.5;
+                font-family: $IBM;
+                &.active{
+                    opacity: 1;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+}
+
+.socials{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    span{
+        margin-right: 30px;
+        font-size: 20px;
+        line-height: 26px;
+    }
+    ul{
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        margin-left: -10px;
+        margin-right: -10px;
+        li{
+            padding-left: 10px;
+            padding-right: 10px;
+            a{
+                display: flex;
+                height: 100%;
+                align-items: center;
+                text-decoration: none;
+                &:hover{
+                    opacity: 0.5;
+                }
+            }
+        }
+    }
+}
+
+
+.subscribe-form{
+    border: 2px solid $dark;
+    padding: 30px 40px;
+    h2{
+        margin-top: 0;
+        font-size: 26px;
+        line-height: 34px;
+        margin-bottom: 30px;
+        font-weight: normal;
+    }
+    .form-bottom{
+        padding-top: 10px;
+        .btn{
+            width: 100%;
+        }
+    }
+}
+
+.fieldset {
+    margin-bottom: 30px;
+    width: 100%;
+    input{
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid $dark;
+        height: 60px;
+        font-size: 20px;
+        font-family: $IBM;
+        &::placeholder{
+            font-size: 20px;
+            opacity: 0.5;
+        }
+    }
+}
+
+.form-bottom{
+    span{
+        display: block;
+        font-size: 12px;
+        line-height: 16px;
+        padding-top: 20px;
+    }
 }
